# nota

./: .gitignore  README.md  SPEC.md  build.cmd  index.html  package-lock.json  package.json  vite.config.js
.github/: copilot-instructions.md
src/: App.jsx  main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
